--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Awesome Books||ES6</title>
     <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
 </head>
 <body>
   <div class="container">
@@ -37,17 +36,18 @@
     <div class="contact-info hidden">
       <h3 class="contact-header">Contact Information</h3>
       <p class="contact-text1">Do you have any questions or just want to say "Hello"?</p>
-      <p class="contact-text2">You can reach out to us!</p>
+      <p class="contact-text2">You can reach out to me!</p>
       <ul class="contact-ul">
-        <li class="contact-list">Our e-mail: mail@mail.com</li>
-        <li class="contact-list">Our phone number: 0043586534422</li>
-        <li class="contact-list">Our address: Streetname 22, 84503 City, Country</li>
+        <li class="contact-list">My e-mail: mail@mail.com</li>
+        <li class="contact-list">My phone number: 0043586534422</li>
+        <li class="contact-list">My address: Streetname 22, 84503 City, Country</li>
       </ul>
     </div>
     <footer class="footer">
-      <p class="copyright">&copy;Copyright      ...</p>
+      <p class="copyright">&copy;Copyright     ...</p>
     </footer>
   </div>
-
+  
+  <script type="module" src="index.js"></script>
 </body>
 </html>
