add time.js file and imported into index.js

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           <div class="link" id="link3">Contact</div>
         </div>
       </div>
-      <p class="time">August 12th 2022, 9:30:32 am</p>
+      <div class="time">
+        <p class="time">August 12th 2022, 9:30:32 am</p>
+      </div>
     </nav>
     <h1 class="header hidden">Awesome Books📚</h1>
 
